define string as UTF8

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -4,15 +4,21 @@ package(default_visibility = ["//visibility:public"])
 
 cc_library(
     name = "base",
-    srcs = [
-        "types.cpp",
-        "types_impl.hpp",
-    ],
     hdrs = [
         "types.hpp",
     ],
     deps = [
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/types:span",
+    ],
+)
+
+cc_library(
+    name = "strings",
+    hdrs = [
+        "strings.hpp",
+    ],
+    deps = [
+        "@com_pblaberge_base//unicode/utf8",
     ],
 )
